%% PoC #03 NestJS — ERD
%% 일자: 2026-04-30 / 출처: src/**/*.entity.ts (TypeORM 0.2)
%% ★ G6 v1.2.2 sub-section (b) TypeORM 정합 — entity 데코 + 관계 알고리즘 추출
%% ★★★ no-simulation 정합 — 운영 DB 부재 / 실 DDL 검증 carry-over

erDiagram
    USER {
        int id PK
        varchar(255) username "★ UQ 부재 (F-120 critical)"
        varchar(255) email "@IsEmail / ★ UQ 부재"
        varchar(255) bio "default ''"
        varchar(255) image "default ''"
        varchar(255) password "argon2 hash via @BeforeInsert"
    }

    ARTICLE {
        int id PK
        varchar(255) slug "★ UQ 부재 (F-120) / slugify random suffix 회피"
        varchar(255) title
        varchar(255) description "default ''"
        varchar(255) body "★ varchar(255) - text 권장"
        timestamp created "default CURRENT_TIMESTAMP"
        timestamp updated "@BeforeUpdate"
        text tagList "TypeORM simple-array - F-123 두 SoT"
        int favoriteCount "default 0 - race 위험"
        int authorId FK "implicit @ManyToOne"
    }

    COMMENT {
        int id PK
        varchar(255) body "★ varchar(255) - 길이 부족 가능"
        int articleId FK "implicit @ManyToOne"
    }

    TAG {
        int id PK
        varchar(255) tag "★ UQ 부재 / F-122 dead code 가능성"
    }

    FOLLOWS {
        int id PK
        int followerId "★★ FK 부재 (F-121 high)"
        int followingId "★★ FK 부재 (F-121 high)"
    }

    USER_FAVORITES_ARTICLE {
        int userEntityId PK,FK "★ TypeORM auto junction"
        int articleEntityId PK,FK
    }

    USER ||--o{ ARTICLE : "authors (OneToMany)"
    USER ||--o{ USER_FAVORITES_ARTICLE : "favorites (ManyToMany via @JoinTable)"
    ARTICLE ||--o{ COMMENT : "has (OneToMany eager:true ★F-124 N+1)"
    ARTICLE ||--o{ USER_FAVORITES_ARTICLE : "favored by"

    %% ★ FK 부재 관계 (점선 — referential integrity 부재)
    USER }o..o{ FOLLOWS : "★ implicit (followerId/followingId number column - F-121)"
    USER }o..o{ FOLLOWS : "★ implicit"

    %% ★ 두 SoT (F-123) — Article.tagList (column) vs TAG (별 테이블)
    ARTICLE }..o{ TAG : "★ 두 SoT - tagList comma-separated vs TAG row (의미 모순)"
